[package]
name = "native"
version = "0.1.0"
authors = ["xarvic <xarvic@web.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glium = "0.27.0"
glutin = "0.24.0"
image = "0.23.4"
rand = "0.7.3"
lazy_static = "1.4.0"